Fix: Use relative path for data fetching in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -237,7 +237,7 @@
 
     <script>
         // Configuration
-        const DATA_BASE_URL = '/data';
+        const DATA_BASE_URL = 'data';
         
         // Company names mapping
         const COMPANY_NAMES = {
