Debug: Add version footer v1.1

--- a/dashboard.html
+++ b/dashboard.html
@@ -235,6 +235,9 @@
         <div id="content">
             <div class="loading">Loading data...</div>
         </div>
+        <div style="text-align: center; color: rgba(255,255,255,0.5); margin-top: 20px; font-size: 0.8rem;">
+            v1.1 - Debug Mode
+        </div>
     </div>
 
     <script>
